--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>cool and awesome renderer</title>
+    <title>cool and awesome renderer from venkat</title>
 
     <link rel="stylesheet" href="./style.css">
   </head>
