--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
     <title>Forward Plus and Clustered Deferred Shading</title>
 
     <link rel="stylesheet" href="./style.css">
